--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ table{
 }
 
 .table tr:hover{
-    background-color:#06d6a0 ;
+    background-color:#F4C430 ;
 }
 
 .table tr:hover td > a{
@@ -197,13 +197,13 @@ table{
 }
 
 .radio input[type='radio']:checked + .radio-label:before{
-    background-color: #16db93;
+    background-color: #F4C430;
     box-shadow: inset 0 0 0 4px #e9ecef;
 }
 
 .radio input[type='radio']:focus + .radio-label:before{
     outline: none;
-    border-color:#16db93;
+    border-color:#F4C430;
 }
 
 .radio input[type='radio']:disabled + .radio-label:before{
@@ -216,7 +216,7 @@ table{
 #add_user .form-group .btn{
     width: 100%;
     padding: .9em 1em;
-    background-color:#16db93; 
+    background-color:#F4C430; 
     border: none;
     font-family: 'PT Sans', sans-serif;
     font-size: 1em;
