--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -4,9 +4,7 @@
 <footer class="page-footer font-small blue">
 </br>
     <!-- Copyright -->
-    <div class="footer" style=" background-color: #d68306;
-    padding: 1em 0;
-    width: 100%;">© 2022 Copyright:
+    <div class="footer" style=" background-color: #d68306; width: 100%;">© 2022 Copyright:
       <a href="http://aakashsingh.herokuapp.com/"> aakashsingh.herokuapp.com</a>
     </div>
     <!-- Copyright -->
